force-app/main/default/objects/Bottle__c/Bottle__c.object-meta.xml
<CustomObject>
    <description>Unique Product Identifiers and Descriptions</description>
    <label>Bottle</label>
    <nameField>
        <label>Bottle Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bottles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>