force-app/main/default/objects/Bottle__c/fields/Bottle_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Bottle_Identifier__c</fullName>
    <description>Product Code</description>
    <externalId>true</externalId>
    <inlineHelpText>Product Code</inlineHelpText>
    <label>Bottle Identifier</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>