force-app/main/default/objects/Bottle__c/fields/Historic_Bottle_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Historic_Bottle_Identifier__c</fullName>
    <description>Captures the bottle identifier of all bottle records entered into the system pre April 2020</description>
    <label>Historic Bottle Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>