force-app/main/default/objects/Bottle__c/fields/Pack_Spec__c.field-meta.xml
<CustomField>
    <fullName>Pack_Spec__c</fullName>
    <label>Pack Spec</label>
    <length>10</length>
    <type>Text</type>
</CustomField>