force-app/main/default/objects/Bottle__c/fields/SAP_Material_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Material_Code__c</fullName>
    <label>SAP Material Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>