force-app/main/default/objects/Bottle__c/fields/SAP_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Model_Number__c</fullName>
    <externalId>true</externalId>
    <label>SAP Model Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>