force-app/main/default/objects/Bottle__c/fields/Weight_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Weight_per_Unit__c</fullName>
    <description>Weight per unit in grams</description>
    <label>Weight per Unit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>