force-app/main/default/objects/Bottle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Bottle_Identifier__c</columns>
    <columns>SAP_Model_Number__c</columns>
    <columns>SAP_Material_Code__c</columns>
    <columns>NAME</columns>
    <columns>Weight_per_Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>